[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
connection_panel = NodePath("CanvasLayer/ConnectionPanel")
host_field = NodePath("CanvasLayer/ConnectionPanel/GridContainer/HostField")
port_field = NodePath("CanvasLayer/ConnectionPanel/GridContainer/PortField")
message_label = NodePath("CanvasLayer/MessageLabel")
sync_lost_label = NodePath("CanvasLayer/SyncLostLabel")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ConnectionPanel" type="PanelContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.0
margin_top = -45.0
margin_right = 109.0
margin_bottom = 45.0

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/ConnectionPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 211.0
margin_bottom = 83.0
columns = 2

[node name="HostLabel" type="Label" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "host:"

[node name="HostField" type="LineEdit" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_top = 33.0
margin_right = 100.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "port:"

[node name="PortField" type="LineEdit" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_left = 104.0
margin_top = 28.0
margin_right = 204.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "9999"

[node name="ServerButton" type="Button" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_top = 56.0
margin_right = 100.0
margin_bottom = 76.0
size_flags_horizontal = 3
text = "server"

[node name="ClientButton" type="Button" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_left = 104.0
margin_top = 56.0
margin_right = 204.0
margin_bottom = 76.0
size_flags_horizontal = 3
text = "client"

[node name="MessageLabel" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 14.0
align = 1

[node name="ResetButton" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -20.0
text = "reset"

[node name="SyncLostLabel" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 14.0
text = "regaining sync..."

[connection signal="pressed" from="CanvasLayer/ConnectionPanel/GridContainer/ServerButton" to="." method="_on_ServerButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/GridContainer/ClientButton" to="." method="_on_ClientButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ResetButton" to="." method="_on_ResetButton_pressed"]
